# incident-triage

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
data/: resolution_memory.json
docs/: evaluation.md  sample_digest.md  stage-2.md
scripts/: provision_ai_search.py  run_digest.py  search_resolution_memory.py
src/incident_triage/: aggregate.py  dedup.py  digest.py  incidents.py  memory.py  pipeline.py  schema.py  triage.py
tests/: test_dedup.py  test_memory.py  test_pipeline.py  test_schema.py  test_triage.py
tests/fixtures/: mock_incidents.csv
